--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -19,13 +19,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-		"baseUrl": "./",
-		"paths": {
-			"~/*": ["./src/*"],
-		},
+    "jsx": "react",
   },
-	"include": [
-		"src/**/*"
-	]
+  "include": [
+    "src/**/*"
+  ]
 }
