--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "editor",
+  "name": "@react-page-constructor/editor",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Labado Team",
+    "url": "https://labado.ru"
+  },
   "dependencies": {
+    "@react-page-constructor/components": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +15,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -39,5 +49,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "postcss-calc": "^8.0.0",
+    "postcss-color-function": "^4.1.0",
+    "postcss-csso": "^5.0.0",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.3",
+    "postcss-selector-matches": "^4.0.0"
   }
 }
